force-app/main/default/objects/pse__Utilization_Result__c/pse__Utilization_Result__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__UtilizationResultHelp</customHelpPage>
    <description>Stores the utilization calculation records created for a resource.</description>
    <label>Utilization Result</label>
    <nameField>
        <displayFormat>URS-{000000}</displayFormat>
        <label>Utilization Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utilization Results</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>