force-app/main/default/objects/pse__Utilization_Result__c/fields/pse__Unheld_Resource_Request_Weighted_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Unheld_Resource_Request_Weighted_Hours__c</fullName>
    <description>The sum of weighted hours calculated from the unheld resource requests of the role that is associated with this utilization result.</description>
    <inlineHelpText>The sum of weighted hours calculated from the unheld resource requests of the role that is associated with this utilization result.</inlineHelpText>
    <label>Unheld Resource Request Weighted Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>