force-app/main/default/objects/pse__Utilization_Result__c/fields/pse__Weighted_Hours_At_Threshold_Value_1__c.field-meta.xml
<CustomField>
    <fullName>pse__Weighted_Hours_At_Threshold_Value_1__c</fullName>
    <description>The sum of weighted hours calculated from the unheld resource requests of the role that is associated with this utilization result at threshold value 1.</description>
    <inlineHelpText>The sum of weighted hours calculated from the unheld resource requests of the role that is associated with this utilization result at threshold value 1.</inlineHelpText>
    <label>Weighted Hours at Threshold Value 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>