force-app/main/default/objects/pse__Utilization_Result__c/fields/pse__Weighted_Hours_At_Threshold_Value_4__c.field-meta.xml
<CustomField>
    <fullName>pse__Weighted_Hours_At_Threshold_Value_4__c</fullName>
    <description>The sum of weighted hours calculated from the unheld resource requests of the role that is associated with this utilization result at threshold value 4.</description>
    <inlineHelpText>The sum of weighted hours calculated from the unheld resource requests of the role that is associated with this utilization result at threshold value 4.</inlineHelpText>
    <label>Weighted Hours at Threshold Value 4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>